package enum_oops2;

public enum JokeType {
    PUN, DARK, MISC, PROGRAMMING, ANY
}
